fixed added spacing

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 .box {
   display: flex;
   flex-direction: column;
@@ -27,6 +28,7 @@ body {
   height: 350px;
   background: #fff;
 }
+
 .box::before {
   content: "";
   position: absolute;
@@ -38,6 +40,7 @@ body {
   border-radius: 5px;
   transform: skewX(2deg) skewY(4deg);
 }
+
 .box::after {
   content: "";
   position: absolute;
@@ -48,6 +51,7 @@ body {
   background: linear-gradient(315deg, #D95252, #D95252);
   transform: skewX(2deg) skewY(2deg);
 }
+
 .box span {
   position: absolute;
   top: 0;
@@ -57,13 +61,16 @@ body {
   background: #282c34;
   z-index: 10;
 }
-h2, h3 {
+
+h2,
+h3 {
   position: relative;
   color: #fff;
   font-size: 2em;
   z-index: 11;
   margin: 0;
 }
+
 .box h3 {
   font-size: 1.25em;
   transition: ease-in-out 0.3s;
@@ -72,7 +79,7 @@ h2, h3 {
 ul {
   display: flex;
   margin: 0;
-  padding: 0; 
+  padding: 0;
 }
 
 ul li {
@@ -84,12 +91,17 @@ ul li {
   animation: grow 1.6s ease-in-out infinite;
 }
 
-
 @keyframes grow {
-  0% ,
-  40% ,
-  100% { transform:scale(0.2); }
-  20% { transform:scale(1); }
+
+  0%,
+  40%,
+  100% {
+    transform: scale(0.2);
+  }
+
+  20% {
+    transform: scale(1);
+  }
 }
 
 ul li:nth-child(1) {
@@ -120,8 +132,9 @@ ul li:nth-child(5) {
   animation-delay: -0.6s;
   background: #ba68c8;
   box-shadow: 0 0 50px #ba68c8;
-  
+
 }
+
 ul li:nth-child(6) {
   animation-delay: -0.4s;
   background: #f57c00;
